generated-tests/tests/snapshots/rust/rust__test_generated_higher_ranked_trait_bound.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn5<F>(f: F) where F: for<'a> Fn(&'a str) -> &'a str { }

AST:
(source_file
  (function_item
    (identifier test_fn5)
    (type_parameters
      (type_identifier)
    )
    (parameters
      (parameter
        (identifier f)
        (type_identifier)
      )
    )
    (where_clause
      (where_predicate
        (type_identifier)
        (trait_bounds
          (higher_ranked_trait_bound
            (type_parameters
              (lifetime
                (identifier a)
              )
            )
            (function_type
              (type_identifier)
              (parameters
                (reference_type
                  (lifetime
                    (identifier a)
                  )
                  (primitive_type)
                )
              )
              (reference_type
                (lifetime
                  (identifier a)
                )
                (primitive_type)
              )
            )
          )
        )
      )
    )
    (block)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn5",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "test_fn5",
            ),
        },
        Definition {
            name: "f",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: Some(
                "test_fn5",
            ),
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
