generated-tests/tests/snapshots/rust/rust__test_generated_if_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Some(value1) = opt { value1 + 1 } else { 0 }

AST:
(source_file
  (expression_statement
    (if_expression
      (let_condition
        (tuple_struct_pattern
          (identifier Some)
          (identifier value1)
        )
        (identifier opt)
      )
      (block
        (binary_expression
          (identifier value1)
          (integer_literal)
        )
      )
      (else_clause
        (block
          (integer_literal)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value1",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
