generated-tests/tests/snapshots/rust/rust__test_generated_index_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
arr1[i]

AST:
(source_file
  (ERROR
    (index_expression
      (identifier arr1)
      (identifier i)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
