generated-tests/tests/snapshots/rust/rust__test_generated_let_declaration.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var5 = source1;

AST:
(source_file
  (let_declaration
    (identifier var5)
    (identifier source1)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var5",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "var5",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 9,
        },
        SerializableUsage {
            name: "source1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 12,
            end_line: 1,
            end_column: 19,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
