generated-tests/tests/snapshots/rust/rust__test_generated_never_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn8() -> ! { panic!("never returns") }

AST:
(source_file
  (function_item
    (identifier test_fn8)
    (parameters)
    (never_type)
    (block
      (macro_invocation
        (identifier panic)
        (token_tree
          (string_literal
            (string_content)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn8",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "test_fn8",
            ),
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
