generated-tests/tests/snapshots/rust/rust__test_generated_parenthesized_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
(a3 + b3)

AST:
(source_file
  (ERROR
    (parenthesized_expression
      (binary_expression
        (identifier a3)
        (identifier b3)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
