generated-tests/tests/snapshots/rust/rust__test_generated_range_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
0..10

AST:
(source_file
  (ERROR
    (range_expression
      (integer_literal)
      (integer_literal)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
